Created BrukerLoggbok_old, Regler_old, Resultat_individuell.RowTemplate2, Resultat_team_old and 4 more; Edited BrukerLoggbok, Homepage, Loggbok, Regler and 5 more; Deleted Resultat_individuell_old.RowTemplate2, Trekninger.RowTemplate3 and Resultat_team.RowTemplate5

--- a/client_code/Homepage/form_template.yaml
+++ b/client_code/Homepage/form_template.yaml
@@ -11,6 +11,16 @@ components_by_slot:
     name: navigation_link_2
     properties: {text: Resultater}
     type: form:dep_91t3sowbnwbk:_Components.NavigationLink
+  - event_bindings: {click: regler_click}
+    layout_properties: {}
+    name: regler
+    properties: {text: Regler}
+    type: form:dep_91t3sowbnwbk:_Components.NavigationLink
+  - event_bindings: {click: trekninger_click}
+    layout_properties: {}
+    name: trekninger
+    properties: {text: Trekninger}
+    type: form:dep_91t3sowbnwbk:_Components.NavigationLink
 is_package: true
 layout: {type: 'form:dep_91t3sowbnwbk:Layouts.NavigationRailLayout'}
 layout_metadata: {title: Framskritt}
