--- a/client_code/Resultat_individuell/form_template.yaml
+++ b/client_code/Resultat_individuell/form_template.yaml
@@ -18,7 +18,7 @@ components_by_slot:
     - components:
       - layout_properties: {}
         name: resultat_repeat_panel
-        properties: {item_template: Resultat_individuell_old.RowTemplate2}
+        properties: {item_template: Resultat_individuell.RowTemplate2}
         type: RepeatingPanel
       layout_properties: {grid_position: 'QHWAEX,RKEPZN'}
       name: data_grid_1
@@ -29,11 +29,6 @@ components_by_slot:
         - {data_key: column_1, expand: false, id: LSHEHV, title: Team, width: 87}
         - {data_key: column_1, id: PFFFKV, title: Utmerkelser}
       type: DataGrid
-    - event_bindings: {click: lukk_button_click}
-      layout_properties: {grid_position: 'KKGEWN,NSQFGW'}
-      name: lukk_button
-      properties: {align: center, role: filled-button, text: Lukk}
-      type: Button
     - components:
       - layout_properties: {grid_position: 'FHRIMM,XYECDR'}
         name: label_2_copy
