--- a/client_code/Resultat_individuell_old/form_template.yaml
+++ b/client_code/Resultat_individuell_old/form_template.yaml
@@ -17,7 +17,7 @@ components:
   - components:
     - layout_properties: {}
       name: resultat_repeat_panel
-      properties: {item_template: Resultat_individuell_old.RowTemplate2}
+      properties: {item_template: Resultat_individuell.RowTemplate2}
       type: RepeatingPanel
     layout_properties: {grid_position: 'QHWAEX,RKEPZN'}
     name: data_grid_1
