--- a/client_code/Resultat_team/form_template.yaml
+++ b/client_code/Resultat_team/form_template.yaml
@@ -1,33 +1,29 @@
-components:
-- components:
-  - layout_properties: {grid_position: 'MTSGUN,FHFTBQ'}
-    name: label_1
-    properties: {align: center, role: headline, text: Poengstilling Team}
-    type: Label
-  - event_bindings: {click: button_1_click}
-    layout_properties: {grid_position: 'KFQSRV,XGIAFS'}
-    name: button_1
-    properties: {role: filled-button, text: Poengstilling Individuell}
-    type: Button
+components_by_slot:
+  content:
   - components:
-    - name: team_resultat_repeating_panel
-      properties: {item_template: Resultat_team.RowTemplate5}
-      type: RepeatingPanel
-    layout_properties: {grid_position: 'ZLRLJD,SBUBFU'}
-    name: data_grid_1
-    properties:
-      columns:
-      - {data_key: column_1, id: JKSDUP, title: Team}
-      - {data_key: column_2, id: VJQQOR, title: Poeng}
-    type: DataGrid
-  - event_bindings: {click: lukk_button_click}
-    layout_properties: {grid_position: 'FACYFA,RKQROA'}
-    name: lukk_button
-    properties: {align: center, role: filled-button, text: Lukk}
-    type: Button
-  layout_properties: {grid_position: 'VHIKZP,ZCJBQF'}
-  name: outlined_card_1
-  properties: {role: tonal-card}
-  type: ColumnPanel
-container: {type: ColumnPanel}
+    - layout_properties: {grid_position: 'MTSGUN,FHFTBQ'}
+      name: label_1
+      properties: {align: center, role: headline, text: Poengstilling Team}
+      type: Label
+    - event_bindings: {click: button_1_click}
+      layout_properties: {grid_position: 'KFQSRV,XGIAFS'}
+      name: button_1
+      properties: {role: filled-button, text: Poengstilling Individuell}
+      type: Button
+    - components:
+      - name: team_resultat_repeating_panel
+        properties: {item_template: Resultat_team_old.RowTemplate5}
+        type: RepeatingPanel
+      layout_properties: {grid_position: 'ZLRLJD,SBUBFU'}
+      name: data_grid_1
+      properties:
+        columns:
+        - {data_key: column_1, id: JKSDUP, title: Team}
+        - {data_key: column_2, id: VJQQOR, title: Poeng}
+      type: DataGrid
+    layout_properties: {}
+    name: outlined_card_1_copy
+    properties: {role: tonal-card}
+    type: ColumnPanel
 is_package: true
+layout: {type: 'form:Homepage'}
