--- a/client_code/admin_ny_aktivitet_old/form_template.yaml
+++ b/client_code/admin_ny_aktivitet_old/form_template.yaml
@@ -1,6 +1,6 @@
-components_by_slot:
-  content:
-  - layout_properties: {}
+components:
+- components:
+  - layout_properties: {grid_position: 'GTFRUC,VGAGZK'}
     name: label_1
     properties: {role: headline, text: Forslag til ny idrett med ikon}
     type: Label
@@ -8,7 +8,7 @@ components_by_slot:
     - name: repeating_panel_1
       properties: {item_template: admin_ny_aktivitet_old.RowTemplate9}
       type: RepeatingPanel
-    layout_properties: {}
+    layout_properties: {grid_position: 'YHJIOU,FCBAKY'}
     name: data_grid_1
     properties:
       columns:
@@ -17,5 +17,9 @@ components_by_slot:
       - {data_key: column_3, id: OJLQEN, title: Tidspunkt}
       - {data_key: column_1, id: DPHDBV, title: OK}
     type: DataGrid
+  layout_properties: {grid_position: 'BNMQPB,CVQKYC'}
+  name: outlined_card_1
+  properties: {role: outlined-card}
+  type: ColumnPanel
+container: {type: ColumnPanel}
 is_package: true
-layout: {type: 'form:Homepage'}
