Created Brukerveiledning_slett, Edit_Aktivitet_slett, Loggbok.ItemTemplate3, Resultat_team.RowTemplate5 and 7 more; Edited Resultat_team, Supertrekning, Trekninger, admin and 2 more; Deleted BrukerLoggbok_old, Brukerveiledning, Edit_Aktivitet, Loggbok_OLD and 19 more

--- a/client_code/Resultat_team/form_template.yaml
+++ b/client_code/Resultat_team/form_template.yaml
@@ -12,7 +12,7 @@ components_by_slot:
       type: Button
     - components:
       - name: team_resultat_repeating_panel
-        properties: {item_template: Resultat_team_old.RowTemplate5}
+        properties: {item_template: Resultat_team.RowTemplate5}
         type: RepeatingPanel
       layout_properties: {grid_position: 'ZLRLJD,SBUBFU'}
       name: data_grid_1
