--- a/client_code/Trekninger/form_template.yaml
+++ b/client_code/Trekninger/form_template.yaml
@@ -16,7 +16,7 @@ components_by_slot:
       type: Button
     - components:
       - name: trekningsliste_repeating_panel
-        properties: {item_template: Trekninger_old.RowTemplate3}
+        properties: {item_template: Trekninger.RowTemplate3}
         type: RepeatingPanel
       layout_properties: {grid_position: 'MKIGMV,UJZEPA'}
       name: data_grid_1
