Created AI_logg_old.RowTemplate8 and AI_logg_old; Edited AI_logg, AdminMeny, Homepage, ServerModule1 and 3 more; Deleted AI_logg.RowTemplate8 and Brukerveiledning_slett

--- a/client_code/Homepage/form_template.yaml
+++ b/client_code/Homepage/form_template.yaml
@@ -34,7 +34,7 @@ components_by_slot:
     type: form:dep_91t3sowbnwbk:_Components.NavigationLink
 is_package: true
 layout:
-  properties: {navigation_rail_collapse_to: bottom_app_bar, navigation_rail_vertical_align: top}
+  properties: {navigation_rail_collapse_to: bottom_app_bar, navigation_rail_vertical_align: top, show_sidesheet: true}
   type: form:dep_91t3sowbnwbk:Layouts.NavigationRailLayout
 layout_metadata: {title: Framskritt}
 slots:
