--- a/client_code/AdminMeny/form_template.yaml
+++ b/client_code/AdminMeny/form_template.yaml
@@ -4,17 +4,24 @@ components_by_slot:
     name: text_1
     properties: {text: Admin}
     type: form:dep_91t3sowbnwbk:_Components.Text
+  content: []
   navigation:
   - layout_properties: {}
     name: navigation_link_1
     properties: {navigate_to: endringslogg, text: Endringslogg}
     type: form:dep_91t3sowbnwbk:_Components.NavigationLink
   - layout_properties: {}
+    name: navigation_link_3
+    properties: {text: Ønsker om ny idrett}
+    type: form:dep_91t3sowbnwbk:_Components.NavigationLink
+  - layout_properties: {}
     name: navigation_link_2
     properties: {icon: 'mi:door_back', navigate_to: Loggbok, text: Ut av admin}
     type: form:dep_91t3sowbnwbk:_Components.NavigationLink
 is_package: true
-layout: {type: 'form:dep_91t3sowbnwbk:Layouts.NavigationDrawerLayout'}
+layout:
+  properties: {show_sidesheet: false}
+  type: form:dep_91t3sowbnwbk:Layouts.NavigationDrawerLayout
 slots:
   content:
     index: 0
