--- a/client_code/admin/form_template.yaml
+++ b/client_code/admin/form_template.yaml
@@ -6,7 +6,7 @@ components_by_slot:
         name: label_3
         properties: {role: headline, text: Admin-meny}
         type: Label
-      layout_properties: {grid_position: 'OAPUZC,WYSKWU'}
+      layout_properties: {grid_position: 'VOAADE,PSWJWW OAPUZC,WYSKWU'}
       name: flow_panel_2
       properties: {align: center}
       type: FlowPanel
@@ -63,7 +63,7 @@ components_by_slot:
         name: ailogg
         properties: {role: tonal-button, text: AI Logg}
         type: Button
-      layout_properties: {grid_position: 'PDOHFX,TLMROV'}
+      layout_properties: {grid_position: 'VOAADE,PSWJWW PDOHFX,TLMROV'}
       name: flow_panel_1
       properties: {align: center}
       type: FlowPanel
@@ -121,7 +121,7 @@ components_by_slot:
         name: button_2
         properties: {role: tonal-button, text: Lag bruker, visible: true}
         type: Button
-      layout_properties: {grid_position: 'SYZSGX,SXLCKE'}
+      layout_properties: {grid_position: 'VOAADE,PSWJWW SYZSGX,SXLCKE'}
       name: enkeltbruker_card
       properties: {role: tonal-card, visible: true}
       type: ColumnPanel
@@ -147,7 +147,7 @@ components_by_slot:
         name: button_4
         properties: {role: tonal-button, text: Opprett mange på en gang}
         type: Button
-      layout_properties: {grid_position: 'LDOKBZ,TKAIJG'}
+      layout_properties: {grid_position: 'VOAADE,PSWJWW LDOKBZ,TKAIJG'}
       name: import_mang_card
       properties: {role: tonal-card, visible: true}
       type: ColumnPanel
@@ -198,7 +198,7 @@ components_by_slot:
         type: DataGrid
       data_bindings:
       - {code: '', property: border, writeback: false}
-      layout_properties: {grid_position: 'UHGLLN,TNHBNW'}
+      layout_properties: {grid_position: 'VOAADE,PSWJWW UHGLLN,TNHBNW'}
       name: team_card
       properties: {role: tonal-card, visible: true}
       type: ColumnPanel
@@ -218,7 +218,7 @@ components_by_slot:
           - {data_key: column_4, expand: false, id: YKRMUE, title: Admin, width: 86.20001220703125}
           - {data_key: column_1, id: TTMEJE, title: ''}
         type: DataGrid
-      layout_properties: {grid_position: 'LUWZDT,FGYWHF'}
+      layout_properties: {grid_position: 'VOAADE,PSWJWW LUWZDT,FGYWHF'}
       name: bruker_card
       properties: {role: tonal-card, visible: true}
       type: ColumnPanel
@@ -280,7 +280,7 @@ components_by_slot:
         name: outlined_card_3
         properties: {role: outlined-card}
         type: ColumnPanel
-      layout_properties: {grid_position: 'NWYMHD,ASANKT'}
+      layout_properties: {grid_position: 'VOAADE,PSWJWW NWYMHD,ASANKT'}
       name: konk_card
       properties: {role: tonal-card, visible: true}
       type: ColumnPanel
@@ -318,7 +318,7 @@ components_by_slot:
         name: outlined_card_5
         properties: {role: outlined-card}
         type: ColumnPanel
-      layout_properties: {grid_position: 'GGATNX,TQRQNU'}
+      layout_properties: {grid_position: 'VOAADE,PSWJWW GGATNX,TQRQNU'}
       name: ai_card
       properties: {role: outlined-card, visible: false}
       type: ColumnPanel
@@ -327,4 +327,4 @@ components_by_slot:
     properties: {role: outlined-card}
     type: ColumnPanel
 is_package: true
-layout: {type: 'form:Homepage'}
+layout: {type: 'form:AdminMeny'}
