Created AdminMenu and test; Edited AI_logg, AdminMeny, Homepage, admin and 2 more

--- a/client_code/admin/form_template.yaml
+++ b/client_code/admin/form_template.yaml
@@ -327,4 +327,4 @@ components_by_slot:
     properties: {role: outlined-card}
     type: ColumnPanel
 is_package: true
-layout: {type: 'form:AdminMeny'}
+layout: {type: 'form:AdminMeny_old'}
