--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -145,4 +145,4 @@ components_by_slot:
     properties: {role: tonal-card}
     type: ColumnPanel
 is_package: true
-layout: {type: 'form:AdminMeny'}
+layout: {type: 'form:AdminMeny_old'}
