Created lykkehjul-transparant.png and lykke_b_w.png; Edited Loggbok and Trekninger.RowTemplate3

--- a/client_code/Trekninger/RowTemplate3/form_template.yaml
+++ b/client_code/Trekninger/RowTemplate3/form_template.yaml
@@ -1,7 +1,10 @@
 components:
 - layout_properties: {column: JKSDUP}
   name: navn_label
-  properties: {}
+  properties:
+    spacing:
+      margin: ['0', null, '0', null]
+      padding: ['4', null, '4', null]
   type: Label
 container: {type: DataRowPanel}
 is_package: true
